# super-yaml

./: AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LLMs.md  README.md  SYAML_REFERENCE.md  syaml-language-0.0.1.vsix  todolist.md
examples/: alert_rules.expected.json  alert_rules.syaml  ansible_showcase.expected.json  ansible_showcase.syaml  basic.expected.json  basic.syaml  checkout.syaml  color_constructors.expected.json  color_constructors.syaml  container_config.syaml  counter_block.expected.json  counter_block.syaml  data_references.expected.json  data_references.syaml  imported_types.expected.json  imported_types.syaml  imported_types_shared.syaml  inventory_policy.expected.json  inventory_policy.syaml  keyed_enum_timezones.expected.json  keyed_enum_timezones.syaml  multiline_strings.expected.json  multiline_strings.syaml  pricing_engine.expected.json  pricing_engine.syaml  remote_import.expected.json  remote_import.syaml  rest_api.expected.json  rest_api.syaml  scoped_import.expected.json  scoped_import.syaml  service_scaling.expected.json  service_scaling.syaml  syaml.syaml  template_constraint.expected.json  template_constraint.syaml  template_constraint_shared.syaml  template_service.expected.json  template_service.syaml  template_service_shared.syaml  (+14 more)
scripts/: check-examples.sh
src/: ast.rs  coerce.rs  contracts.rs  error.rs  fetch.rs  functional.rs  html_docs_gen.rs  json_schema_export.rs  json_schema_import.rs  lib.rs  mini_yaml.rs  module.rs  proto_codegen.rs  resolve.rs  rust_codegen.rs  schema.rs  section_scanner.rs  template.rs  type_hints.rs  (+4 more)
(+32 files in other folders)
