[package]
name = "super_yaml"
version = "0.2.0"
edition = "2021"

[lib]
name = "super_yaml"
path = "src/lib.rs"

[[bin]]
name = "super-yaml"
path = "src/bin/super-yaml.rs"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
regex = "=1.12.3"
semver = "1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149" }
sha2 = "0.10"
thiserror = "=1.0.69"
ureq = "3"
